[package]
name = "dark_window"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.windows]
version = "0.43.0"
features = [
    "Win32_Foundation",
    "Win32_System_Registry",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Dwm",
    "Win32_System_LibraryLoader",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_HiDpi",
    "Win32_UI_Controls",
]

[dependencies]
log = { version = "0.4.*", features = ["std"] }
simplelog = "^0.12.0"
